--- a/src/styles/_table.scss
+++ b/src/styles/_table.scss
@@ -2,6 +2,7 @@ table {
   th,
   td {
     padding: 10px 12px;
+    text-align: start;
   }
 }
 
@@ -18,7 +19,6 @@ table {
       tr {
         background-color: var(--color-table-header);
         th {
-          text-align: left;
           border-bottom: 1px solid var(--color-table-border);
           color: var(--color-text-secondary);
           letter-spacing: 0.04em;
